--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="box2 d-flex">
-                <div class="items d-flex">
+                <div class="items">
                     <div class="item1">
                         <img src="img/pump-bottle-02 1.png" alt="">
                         <div class="box_lorem">
